[package]
name = "rusty-wine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webserver
actix-web = "4.3.1"
# Json serialization
serde = { version = "1.0.156", features = ["derive"] }
# Database
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
